Add simple logic for application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required( VERSION 3.28 )
 
 project( WSEIDevOps )
 
-add_executable( WSEIDevOps src/main.cpp )
+add_executable( WSEIDevOps src/main.cpp src/DataLoader.hpp src/DataLoader.cpp src/Mountain.hpp )
 
 enable_testing()
 
@@ -13,7 +13,15 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable( googletest )
 
+FetchContent_Declare(
+    nlohmann_json
+    URL https://github.com/nlohmann/json/archive/refs/tags/v3.11.3.zip
+)
+FetchContent_MakeAvailable( nlohmann_json )
+
 add_executable( exampleTest tests/exampleTest.cpp )
+
+target_link_libraries( WSEIDevOps nlohmann_json )
 
 target_link_libraries( exampleTest gtest_main )
 
